--- a/assets/scss/partials/navigation.scss
+++ b/assets/scss/partials/navigation.scss
@@ -373,24 +373,39 @@
     z-index: 999;
     animation: fadein .5s;
     @include transition;
+    animation: fadein .5s;
 
     @include media('<=mobile_menu') {
         display: none;
     }
 
+    .close,
+    .open {
+        position: absolute;
+		display: block;
+        transition: opacity .25s ease-in-out;
+    }
+
 	.close {
-		display: none;
+        opacity: 0;
+        visibility: hidden;
 	}
 
+    .open {
+        opacity: 1;
+        visibility: visible;
+    }
+
 	&.active {
-        animation: fadein .5s;
 
 		.close {
-			display: inline;
+            opacity: 1;
+            visibility: visible;
 		}
 
 		.open {
-			display: none;
+            opacity: 0;
+            visibility: hidden;
 		}
 	}
 }
