--- a/assets/scss/partials/search-form.scss
+++ b/assets/scss/partials/search-form.scss
@@ -8,34 +8,59 @@
 
 .header-search {
     position: relative;
-	background: $grey_3;
-	overflow: hidden;
-	padding: 16px;
+	background: transparent;
+	// overflow: hidden;
+	padding: 2px 10px;
 	width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0.2xs linear,opacity 0.2s linear;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        // transition: opacity .2s ease-in-out;
+    }
+
+    &__wrap {
+        display: flex;
+        justify-content: flex-end;
+    }
 
     .search-form {
-        border: 1px solid $border-color;
+        flex: 440px 0 1;
+        // border: 1px solid $border-color;
+        box-shadow:0 3px 16px rgba(0, 0, 0, 0.048), 0 4px 22px rgba(0, 0, 0, 0.047), 0 5px 22px rgba(0, 0, 0, 0.08);
         max-width: 400px;
         position: relative;
-        overflow: hidden;
+        // overflow: hidden;
+        outline: none;
+        border-radius: $border-radius;
+
+        input.search-field {
+            border-radius: $border-radius;
+            padding-right: 44px;
+            width: 100%;
+
+            &:focus {
+                outline: 2px solid $primary-color;
+            }
+        }
     }
 
 	@include media(">=tablet") {
 		position: absolute;
-        bottom: -82px;
+        bottom: -50px;
         left: 50%;
         max-width: 1200px;
         transform: translateX(-50%);
 	}
 
 	@include media("<=mobile_menu") {
-		margin: 0 -48px;
-		width: calc( 100% + 96px );
-	}
-
-    &:not(.active) {
+		// margin: 0 -48px;
+		// width: calc( 100% + 96px );
         display: none;
-    }
+	}
 }
 
 .nav-search {
@@ -51,18 +76,19 @@
         overflow: hidden;
         border-radius: $border-radius;
         margin-top: $block-margin;
+
+        input.search-field {
+            border-radius: $border-radius;
+
+            &:focus {
+                outline: 2px solid $primary-color;
+            }
+        }
     }
 }
 
 
 .search-form {
-	
-
-	.search-field {
-		border: none;
-		padding-right: 44px;
-		width: 100%;
-	}
 
 	.search-submit {
 		background: transparent;
